# py-fastapi

./: README.md  main.py  pyproject.toml  sql_app.db
app/: main.py
sql_app/: curd.py  database.py  main.py  models.py  schemas.py
